Processed reduced wind and solar power

--- a/05_state_power.ipynb
+++ b/05_state_power.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "cluster = PBSCluster(walltime=str(walltime), cores=cores, memory=str(memory), processes=cores,\n",
     "                     job_extra_directives=[\"-q normal\",\n",
-    "                                           \"-P w42\",\n",
+    "                                           \"-P dt6\",\n",
     "                                           \"-l ncpus=\"+str(cores),\n",
     "                                           \"-l mem=\"+str(memory),\n",
     "                                           \"-l storage=gdata/w42+gdata/rt52\"],\n",
@@ -68,7 +68,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-cb67d7ed-5472-11ef-a338-000007bbfe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-994c9a87-f8a0-11ef-833e-000007bdfe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -103,7 +103,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">272d1fc3</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">7e0fd5be</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -134,11 +134,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-49fb5c18-59f7-4136-ab68-22a690309df0</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-835430f6-261b-40ae-a896-4a94042616f6</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.3:41337\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.6:39383\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -184,7 +184,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.121.3:41337' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.6:39383' processes=0 threads=0, memory=0 B>"
       ]
      },
      "execution_count": 4,
@@ -224,6 +224,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fa738a2c-673c-4c42-82fb-8a09f4ada7fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/g/data/w42/dr6273/work/power_models\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /g/data/w42/dr6273/work/power_models\n",
+    "import functions as fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7a339fd2-992c-4e52-a89f-2c92bd2d3e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5dd693f0-c64a-4808-acae-42ea153211df",
    "metadata": {},
@@ -233,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "3a7ad806-d9bb-46ad-8105-70a73c7f73b8",
    "metadata": {},
    "outputs": [],
@@ -243,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "af6c76b5-3536-432f-8889-27aa8721f4fe",
    "metadata": {},
    "outputs": [],
@@ -268,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "604a2134-dac1-4a9a-8029-fb6daae0d7bb",
    "metadata": {},
    "outputs": [],
@@ -285,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "95c0265b-3e94-48ca-af83-ceb60a261efe",
    "metadata": {},
    "outputs": [],
@@ -295,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "854e4ed7-7a4e-4e1e-9726-1a8152d1bc87",
    "metadata": {},
    "outputs": [],
@@ -305,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d1fd8da7-2779-40cc-b9af-ea793e0c9518",
    "metadata": {},
    "outputs": [],
@@ -354,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "8b064825-7929-4e59-80cf-2a46ea22a49e",
    "metadata": {},
    "outputs": [],
@@ -364,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "9bcd4af7-6160-4050-9b19-742c4a9c2b0e",
    "metadata": {},
    "outputs": [],
@@ -416,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "4e357196-d64a-4f1c-9480-ce4859fc4786",
    "metadata": {},
    "outputs": [],
@@ -430,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "9a9a3cf8-6413-4344-99be-4bac640c9886",
    "metadata": {},
    "outputs": [],
@@ -494,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "210aa37d-1384-43df-8520-b56080e2d4ba",
    "metadata": {},
    "outputs": [],
@@ -542,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "8bf1cc8a-f674-48fd-95f2-26f2a0519b27",
    "metadata": {},
    "outputs": [],
@@ -677,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "498ef082-9769-457c-9338-0bdca1ac41b5",
    "metadata": {},
    "outputs": [],
@@ -725,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "9b86e962-97de-4f45-950b-19b98ee31b6b",
    "metadata": {},
    "outputs": [],
@@ -752,23 +782,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "5ea96f76-cd3d-4c70-a8d1-21dfc64d95ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_site_power(years, facilities, method=\"van_der_Wiel\"):\n",
+    "def compute_site_power(years, facilities, method=\"van_der_Wiel\", add_dir_wind=\"\", add_dir_solar=\"\"):\n",
     "    \"\"\"\n",
     "    Compute power time series for each site and each year.\n",
     "    \n",
     "    years: range\n",
     "    facilities: dict of facilities data in dataframe\n",
     "    method: str, which method of capacity factors was used\n",
+    "    add_dir_wind, add_dir_solar: str, additional directory for load_hourly_cf, default \"\"\n",
     "    \"\"\"\n",
     "    site_power_list = []\n",
     "    for year in years:\n",
-    "        w = fn.load_hourly_cf(year, \"wind\", method=method).capacity_factor\n",
-    "        s = fn.load_hourly_cf(year, \"solar\", method=method).capacity_factor\n",
+    "        w = fn.load_hourly_cf(year, \"wind\", method=method, add_dir=add_dir_wind).capacity_factor\n",
+    "        s = fn.load_hourly_cf(year, \"solar\", method=method, add_dir=add_dir_solar).capacity_factor\n",
     "        p = power_for_regions(s, w, facilities)\n",
     "        site_power_list.append(p)\n",
     "    site_power = xr.concat(site_power_list, dim=\"time\")\n",
@@ -778,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "68b1250e-7361-443c-ade2-68ca5063d7c8",
    "metadata": {},
    "outputs": [],
@@ -788,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "0c7c55cd-ad51-4575-9396-9698f17d808e",
    "metadata": {},
    "outputs": [],
@@ -818,6 +849,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12c6d31a-d25b-4de1-bf1a-d67e7fe17b43",
+   "metadata": {},
+   "source": [
+    "#### For reduced wind and solar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "615db513-81cb-4ef6-b11a-0a3f93d84286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_power_reduced_ws = compute_site_power(years, facilities, method=\"van_der_Wiel\", add_dir_wind=\"reduced1pc/\", add_dir_solar=\"reduced1pc/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dd8a9057-82f6-42a9-9a86-7e27262bd794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_power_reduced_ws.to_netcdf(fp + \"site_power_reduced_wind_solar_\" + \"van_der_Wiel\" + \"_era5_hourly_\" + str(years[0]) + \"-\" + str(years[-1]) + \".nc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1d16a4b9-153b-4901-872c-12126076b74a",
    "metadata": {},
    "source": [
@@ -826,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "af7afce6-3260-4339-94c5-cb38b20b06b5",
    "metadata": {},
    "outputs": [],
@@ -870,6 +929,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "195b853e-b358-4aab-92a7-06387fdffda8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_power_reduced = xr.open_mfdataset(fp + \"site_power_reduced_wind_solar_\" + \"van_der_Wiel\" + \"_era5_hourly_\" + str(years[0]) + \"-\" + str(years[-1]) + \".nc\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e6b93e2f-4715-4e71-9e1d-cd85baeca78c",
    "metadata": {},
@@ -895,6 +964,17 @@
    "outputs": [],
    "source": [
     "wind_power = wind_power[\"power\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7f2d281e-390d-4677-b67c-34d77267445c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_power_reduced = compute_state_power(\"Wind\", site_power_reduced).compute()\n",
+    "wind_power_reduced = wind_power_reduced[\"power\"]"
    ]
   },
   {
@@ -1085,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "id": "144823fe-4e37-45ea-8e85-f8bf823cae62",
    "metadata": {},
    "outputs": [],
@@ -1584,6 +1664,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "468c3bce-14f9-4820-b47a-e2c8c0c765b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_power_reduced = wind_power_reduced.assign_coords({\n",
+    "    \"scale_factor_2023\": (\"region\", list(wind_scaling_factors.values()))\n",
+    "})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9dae97e8-fbad-479a-aa76-d2235c98935e",
    "metadata": {},
@@ -2006,6 +2098,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "3708fd85-646a-4c87-ab8c-afb09f25c858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_power_reduced = compute_state_power(\"Solar (Utility)\", site_power_reduced).compute()\n",
+    "solar_power_reduced = solar_power_reduced[\"power\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 117,
    "id": "b472b413-8a11-4ca3-851b-f8a1b19de427",
    "metadata": {},
@@ -2132,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 35,
    "id": "96457169-eeb8-4dbb-a820-f2f2cab3c0e4",
    "metadata": {},
    "outputs": [],
@@ -2149,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 36,
    "id": "8b37fdf4-e0c9-4365-b048-cf1df2b1d467",
    "metadata": {},
    "outputs": [
@@ -2164,7 +2267,7 @@
        " 1.6477877375931334]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2631,6 +2734,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5196607d-2bdf-4003-bda4-0d661d6f94d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_power_reduced = solar_power_reduced.assign_coords({\n",
+    "    \"scale_factor_2023\": (\"region\", list(solar_scaling_factors.values()))\n",
+    "})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "23d28d93-50c3-43b2-9dab-83ab8957df06",
    "metadata": {},
@@ -2640,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "id": "fa273204-0dfc-4324-8571-22837512b676",
    "metadata": {},
    "outputs": [],
@@ -2673,6 +2788,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ba2803cc-ea65-4cec-b42f-5795a2e441ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_power_reduced.to_netcdf(\n",
+    "    fp + \"wind/power/wind_power_reduced1pc_state_van_der_Wiel_era5_hourly_1940-2023.nc\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d81adc94-b86b-4c76-a6cd-68b500ac6745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solar_power_reduced.to_netcdf(\n",
+    "    fp + \"solar/power/solar_power_reduced1pc_state_van_der_Wiel_era5_hourly_1940-2023.nc\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8b2d8df2-6022-43bb-a5d4-69ada52495d9",
    "metadata": {},
@@ -2682,7 +2821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 41,
    "id": "8b60723a-8211-457b-a549-224ca8d8c4bb",
    "metadata": {},
    "outputs": [],
