--- a/07_REZ_power.ipynb
+++ b/07_REZ_power.ipynb
@@ -1937,9 +1937,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace Step change 2049-50 wind in N11 with 2,900 MW (https://www.dcceew.gov.au/energy/renewable/offshore-wind/areas/illawarra)\n",
-    "gen[\"artificial_V7_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
-    "gen.loc[\"V7\", \"artificial_V7_wind_2049-50\"] = 2900"
+    "# gen[\"artificial_V7_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "# gen.loc[\"V7\", \"artificial_V7_wind_2049-50\"] = 2900"
    ]
   },
   {
