--- a/08_compare_sites_REZ.ipynb
+++ b/08_compare_sites_REZ.ipynb
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "dd2c55ac-7b70-44c2-9791-42d2c2753d59",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1098,7 @@
     "cbar = fig.colorbar(p1, cax=cax, ticks=np.arange(1.5, 4, 1), orientation=\"vertical\")\n",
     "cbar.set_ticklabels([\"REZ, no site\", \"Site outside REZ\", \"Site in REZ\"])\n",
     "\n",
-    "plt.savefig(\"figures/REZ_map.png\", format=\"png\", dpi=200, bbox_inches=\"tight\")"
+    "plt.savefig(\"figures/REZ_map.pdf\", format=\"pdf\", bbox_inches=\"tight\")"
    ]
   },
   {
