Changed REZ codes

--- a/06_REZ_mask.ipynb
+++ b/06_REZ_mask.ipynb
@@ -44,24 +44,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "373bf0a7-fc60-439f-aaa8-82119fc484cd",
-   "metadata": {},
-   "source": [
-    "We code each region according to the type of renewables:\n",
-    "\n",
-    "1. Onshore wind\n",
-    "2. Solar\n",
-    "3. Onshore Wind and solar\n",
-    "4. Hydro\n",
-    "5. Hydro and wind\n",
-    "6. Hydro and solar\n",
-    "7. All three\n",
-    "8. Offshore wind\n",
-    "9. None (e.g. N12 Illawarra)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1c5ab070-1735-47c8-b59c-3767a1a283a2",
@@ -73,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "86509e1f-fc05-42d5-bda7-ddb0c692f28d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2bd150cf-5d39-4b2e-887a-98a6f9fc90ff",
    "metadata": {},
    "outputs": [
@@ -471,7 +453,7 @@
        "42  POLYGON Z ((147.00433 -40.01414 0.00000, 146.9...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,10 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "a9d53171-f283-4e0a-a465-5cb16cadd71d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/geopandas/geoseries.py:645: FutureWarning: the convert_dtype parameter is deprecated and will be removed in a future version.  Do ``ser.astype(object).apply()`` instead if you want ``convert_dtype=False``.\n",
+      "  result = super().apply(func, convert_dtype=convert_dtype, args=args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Add central coords of REZ regions\n",
     "rez_gpd['coords'] = rez_gpd['geometry'].apply(lambda x: x.representative_point().coords[:])\n",
@@ -493,48 +484,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1896c0dc-9a87-4ebb-a7aa-87e8cbaee7a3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "e0dae2e5-4937-4275-96fb-784b1faad5f2",
+   "metadata": {},
    "source": [
-    "# rez_gpd.iloc[[i for i in range(len(rez_gpd)) if rez_gpd.iloc[i][\"Name\"][0] == \"T\"]]"
+    "We code each region according to the type of renewables (exlude pumped hydro):\n",
+    "\n",
+    "1. Onshore wind\n",
+    "2. Solar\n",
+    "3. Onshore Wind and solar\n",
+    "4. Offshore wind\n",
+    "5. None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "c15293df-1565-4dc9-b3c2-b0788a0a68d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add column of energy type codes by matching figure with numeric code\n",
-    "region_codes = [\n",
-    "    5, 7, 6, 7, 3, 7, 6, 3, 7, # QLD\n",
-    "    3, 7, 3, 3, 2, 2, 4, 4, 7, 8, 8, 9, # NSW\n",
-    "    6, 3, 1, 1, 3, 2, 8, 8, # VIC\n",
-    "    1, 3, 1, 1, 4, 3, 2, 3, 3, 8, # SA\n",
-    "    3, 7, 7, 8 # TAS\n",
+    "# Add column of energy type codes by matching AEMO document with numeric code\n",
+    "# https://aemo.com.au/-/media/files/major-publications/isp/2024/appendices/a3-renewable-energy-zones.pdf\n",
+    "# Use currently installed for codes\n",
+    "region_codes_current = [\n",
+    "    1, 3, 2, 3, 2, 2, 2, 3, 5, # QLD\n",
+    "    2, 3, 3, 3, 2, 2, 1, 1, 5, 5, 5, 5, # NSW\n",
+    "    5, 2, 3, 1, 2, 2, 5, 5, # VIC\n",
+    "    3, 2, 1, 1, 3, 5, 5, 1, 5, 5, # SA\n",
+    "    1, 1, 1, 5 # TAS\n",
     "    \n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6178fcea-324d-4314-b446-944d52eb7a87",
+   "execution_count": 22,
+   "id": "69ced121-5159-447a-bd32-b21b8b79e74f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rez_gpd['code'] = region_codes"
+    "region_codes_SC2050 = [\n",
+    "    1, 3, 2, 3, 3, 3, 3, 3, 5, # QLD\n",
+    "    2, 3, 3, 3, 3, 2, 1, 1, 3, 4, 5, 5, # NSW\n",
+    "    2, 2, 3, 1, 3, 2, 5, 4, # VIC\n",
+    "    3, 2, 1, 1, 3, 5, 2, 1, 5, 5, # SA\n",
+    "    1, 1, 1, 5 # TAS\n",
+    "    \n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "id": "6178fcea-324d-4314-b446-944d52eb7a87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rez_gpd['code_2023'] = region_codes_current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3b54e675-d890-4c7f-9371-9e4668654a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rez_gpd['code_SC2050'] = region_codes_SC2050"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "f117f3e4-931f-49c7-b4b0-e2758a32bba6",
    "metadata": {},
    "outputs": [],
@@ -546,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "fd7f6a27-1544-4037-a7f7-7c9a68c9f9bd",
    "metadata": {},
    "outputs": [],
@@ -556,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "45f933a5-7468-4324-a070-7daefb8869c3",
    "metadata": {},
    "outputs": [],
@@ -569,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "2b944e50-7dbf-41e8-a772-c8d482b056b2",
    "metadata": {},
    "outputs": [
@@ -597,7 +619,8 @@
        "      <th>Name</th>\n",
        "      <th>Type</th>\n",
        "      <th>geometry</th>\n",
-       "      <th>code</th>\n",
+       "      <th>code_2023</th>\n",
+       "      <th>code_SC2050</th>\n",
        "      <th>longitude</th>\n",
        "      <th>latitude</th>\n",
        "    </tr>\n",
@@ -608,7 +631,8 @@
        "      <td>Q1 Far North QLD</td>\n",
        "      <td>REZ</td>\n",
        "      <td>POLYGON Z ((146.13492 -17.65256 0.00000, 146.0...</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>145.123721</td>\n",
        "      <td>-16.187650</td>\n",
        "    </tr>\n",
@@ -617,7 +641,8 @@
        "      <td>Q2 North Qld Clean Energy Hub</td>\n",
        "      <td>REZ</td>\n",
        "      <td>POLYGON Z ((143.72015 -16.97938 0.00000, 143.5...</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>144.062266</td>\n",
        "      <td>-19.110858</td>\n",
        "    </tr>\n",
@@ -626,7 +651,8 @@
        "      <td>Q3 Northern Qld</td>\n",
        "      <td>REZ</td>\n",
        "      <td>POLYGON Z ((146.27782 -18.71920 0.00000, 146.2...</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>146.333143</td>\n",
        "      <td>-19.197589</td>\n",
        "    </tr>\n",
@@ -635,7 +661,8 @@
        "      <td>Q4 Isaac</td>\n",
        "      <td>REZ</td>\n",
        "      <td>POLYGON Z ((147.64366 -19.94015 0.00000, 147.5...</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>148.339869</td>\n",
        "      <td>-21.393793</td>\n",
        "    </tr>\n",
@@ -644,6 +671,7 @@
        "      <td>Q5 Barcaldine</td>\n",
        "      <td>REZ</td>\n",
        "      <td>POLYGON Z ((145.82086 -23.84279 0.00000, 145.9...</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>145.595326</td>\n",
        "      <td>-22.855731</td>\n",
@@ -660,22 +688,22 @@
        "3                       Q4 Isaac  REZ   \n",
        "4                  Q5 Barcaldine  REZ   \n",
        "\n",
-       "                                            geometry  code   longitude  \\\n",
-       "0  POLYGON Z ((146.13492 -17.65256 0.00000, 146.0...     5  145.123721   \n",
-       "1  POLYGON Z ((143.72015 -16.97938 0.00000, 143.5...     7  144.062266   \n",
-       "2  POLYGON Z ((146.27782 -18.71920 0.00000, 146.2...     6  146.333143   \n",
-       "3  POLYGON Z ((147.64366 -19.94015 0.00000, 147.5...     7  148.339869   \n",
-       "4  POLYGON Z ((145.82086 -23.84279 0.00000, 145.9...     3  145.595326   \n",
+       "                                            geometry  code_2023  code_SC2050  \\\n",
+       "0  POLYGON Z ((146.13492 -17.65256 0.00000, 146.0...          1            1   \n",
+       "1  POLYGON Z ((143.72015 -16.97938 0.00000, 143.5...          3            3   \n",
+       "2  POLYGON Z ((146.27782 -18.71920 0.00000, 146.2...          2            2   \n",
+       "3  POLYGON Z ((147.64366 -19.94015 0.00000, 147.5...          3            3   \n",
+       "4  POLYGON Z ((145.82086 -23.84279 0.00000, 145.9...          2            3   \n",
        "\n",
-       "    latitude  \n",
-       "0 -16.187650  \n",
-       "1 -19.110858  \n",
-       "2 -19.197589  \n",
-       "3 -21.393793  \n",
-       "4 -22.855731  "
+       "    longitude   latitude  \n",
+       "0  145.123721 -16.187650  \n",
+       "1  144.062266 -19.110858  \n",
+       "2  146.333143 -19.197589  \n",
+       "3  148.339869 -21.393793  \n",
+       "4  145.595326 -22.855731  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,10 +714,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "3556de10-7191-4393-bda1-1b4170927dac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/jobfs/141525447.gadi-pbs/ipykernel_3080085/927834818.py:2: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  rez_gpd.to_file(\n"
+     ]
+    }
+   ],
    "source": [
     "# Save as shapefile\n",
     "rez_gpd.to_file(\n",
