Combine 10_ and 11_, rename

--- a/10_process_AEMO_data.ipynb
+++ b/10_process_AEMO_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Statis table of generator IDs"
+    "### Dispatch table\n",
+    "\n",
+    "Should only need to do this once"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Downloading the Generator and Load Dispatch table from NEMOSIS for a specified time period\n",
+    "# dynamic_data_compiler(\n",
+    "#     start_time='2023/12/01 00:00:00',\n",
+    "#     end_time='2024/01/01 00:10:00',\n",
+    "#     table_name='DISPATCHLOAD',\n",
+    "#     raw_data_location=raw_NEM_cache\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Static table of generator IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -64,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +130,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>South Australian Water Corporation</td>\n",
        "      <td>Adelaide Desalination Plant</td>\n",
        "      <td>SA1</td>\n",
@@ -123,7 +147,7 @@
        "      <td>6.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>South Australian Water Corporation</td>\n",
        "      <td>Adelaide Desalination Plant</td>\n",
        "      <td>SA1</td>\n",
@@ -140,7 +164,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>South Australian Water Corporation</td>\n",
        "      <td>Adelaide Desalination Plant</td>\n",
        "      <td>SA1</td>\n",
@@ -157,7 +181,7 @@
        "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>South Australian Water Corporation</td>\n",
        "      <td>Adelaide Desalination Plant</td>\n",
        "      <td>SA1</td>\n",
@@ -174,7 +198,7 @@
        "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>South Australian Water Corporation</td>\n",
        "      <td>Adelaide Desalination Plant</td>\n",
        "      <td>SA1</td>\n",
@@ -196,42 +220,42 @@
       ],
       "text/plain": [
        "                          Participant                 Station Name Region  \\\n",
-       "0  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
-       "2  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
+       "1  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
        "3  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
        "4  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
        "5  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
+       "6  South Australian Water Corporation  Adelaide Desalination Plant    SA1   \n",
        "\n",
        "     Dispatch Type Category  Classification Fuel Source - Primary  \\\n",
-       "0  Generating Unit   Market       Scheduled       Battery storage   \n",
-       "2  Generating Unit   Market   Non-Scheduled                 Hydro   \n",
-       "3  Generating Unit   Market  Semi-Scheduled                 Solar   \n",
-       "4  Generating Unit   Market   Non-Scheduled                 Solar   \n",
+       "1  Generating Unit   Market       Scheduled       Battery storage   \n",
+       "3  Generating Unit   Market   Non-Scheduled                 Hydro   \n",
+       "4  Generating Unit   Market  Semi-Scheduled                 Solar   \n",
        "5  Generating Unit   Market   Non-Scheduled                 Solar   \n",
+       "6  Generating Unit   Market   Non-Scheduled                 Solar   \n",
        "\n",
        "  Fuel Source - Descriptor Technology Type - Primary  \\\n",
-       "0                     Grid                   Storage   \n",
-       "2                    Water                 Renewable   \n",
-       "3                    Solar                 Renewable   \n",
+       "1                     Grid                   Storage   \n",
+       "3                    Water                 Renewable   \n",
        "4                    Solar                 Renewable   \n",
        "5                    Solar                 Renewable   \n",
+       "6                    Solar                 Renewable   \n",
        "\n",
        "       Technology Type - Descriptor Aggregation     DUID  \\\n",
-       "0              Battery and Inverter           Y  ADPBA1G   \n",
-       "2                      Run of River           Y   ADPMH1   \n",
-       "3  Photovoltaic Tracking Flat panel           Y   ADPPV1   \n",
-       "4           Photovoltaic Flat panel           Y   ADPPV2   \n",
-       "5           Photovoltaic Flat panel           Y   ADPPV3   \n",
+       "1              Battery and Inverter           Y  ADPBA1G   \n",
+       "3                      Run of River           Y   ADPMH1   \n",
+       "4  Photovoltaic Tracking Flat panel           Y   ADPPV1   \n",
+       "5           Photovoltaic Flat panel           Y   ADPPV2   \n",
+       "6           Photovoltaic Flat panel           Y   ADPPV3   \n",
        "\n",
        "  Reg Cap generation (MW) Max Cap generation (MW)  \n",
-       "0                    7.76                    6.15  \n",
-       "2                    1.44                       1  \n",
-       "3                   24.75                      19  \n",
-       "4                     0.2                     0.2  \n",
-       "5                    0.02                    0.02  "
+       "1                    7.76                    6.15  \n",
+       "3                    1.44                       1  \n",
+       "4                   24.75                      19  \n",
+       "5                     0.2                     0.2  \n",
+       "6                    0.02                    0.02  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,35 +344,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = [2023]\n",
-    "months = [\"01\", \"02\", \"03\", \"04\", \"05\", \"06\", \"07\", \"08\", \"09\", \"10\", \"11\", \"12\"]"
+    "# years = [2021, 2022, 2023]\n",
+    "# months = [\"01\", \"02\", \"03\", \"04\", \"05\", \"06\", \"07\", \"08\", \"09\", \"10\", \"11\", \"12\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "years = [2020]\n",
+    "months = [\"12\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023\n",
-      "01\n",
-      "02\n",
-      "03\n",
-      "04\n",
-      "05\n",
-      "06\n",
-      "07\n",
-      "08\n",
-      "09\n",
-      "10\n",
-      "11\n",
+      "2020\n",
       "12\n"
      ]
     }
