--- a/05_state_power.ipynb
+++ b/05_state_power.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4ea31978-5fa2-4175-8c30-23177ed339f6",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "3a7ad806-d9bb-46ad-8105-70a73c7f73b8",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "af6c76b5-3536-432f-8889-27aa8721f4fe",
    "metadata": {},
    "outputs": [],
@@ -286,6 +286,109 @@
     "    'TAS': pd.read_csv(gen_path+\"edited/facilities_solar_wind_TAS_edited.csv\"),\n",
     "    'WEM': pd.read_csv(gen_path+\"edited/facilities_solar_wind_WEM_edited.csv\")\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d4343c51-1c35-4f3c-855c-665ce938a1c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = \"NSW\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ace3e521-8c6d-40a1-9e02-fc87095c1981",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4352.112, 3433.7799999999997, 508.89, 1107.103, 0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen_list = []\n",
+    "for r in list(facilities.keys())[:-1]:\n",
+    "    g = facilities[r][facilities[r][\"Technology\"] == \"Solar (Utility)\"][\"Generator Capacity (MW)\"].sum()\n",
+    "    gen_list.append(g)\n",
+    "gen_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "44139faa-29d7-4468-a6c0-558165918c28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9401.884999999998"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(gen_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "69a96763-8210-4044-b5c5-83b0c9d78adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3717.12, 2662.7799999999997, 487.49, 1076.0, 0]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen_list = []\n",
+    "for r in list(facilities.keys())[:-1]:\n",
+    "    g = facilities[r][facilities[r][\"Technology\"] == \"Solar (Utility)\"]\n",
+    "    g = g[g[\"Status\"] == \"operating\"][\"Generator Capacity (MW)\"].sum()\n",
+    "    gen_list.append(g)\n",
+    "gen_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "263c5c39-7cad-46c2-bfa2-852e9f893337",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7943.389999999999"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(gen_list)"
    ]
   },
   {
