--- a/01_wind_speed.ipynb
+++ b/01_wind_speed.ipynb
@@ -21,30 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "2afe4fa2-0c6c-481c-a7ff-89faf1adc9ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"01:00:00\"\n",
+    "walltime = \"00:30:00\"\n",
     "cores = 48\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
     "cluster = PBSCluster(walltime=str(walltime), cores=cores, memory=str(memory), processes=cores,\n",
     "                     job_extra_directives=[\"-q normal\",\n",
-    "                                           \"-P w42\",\n",
+    "                                           \"-P dt6\",\n",
     "                                           \"-l ncpus=\"+str(cores),\n",
     "                                           \"-l mem=\"+str(memory),\n",
-    "                                           \"-l storage=gdata/w42+gdata/rt52\"],\n",
+    "                                           \"-l storage=gdata/xp65+gdata/w42+gdata/rt52\"],\n",
     "                     local_directory=\"$TMPDIR\",\n",
     "                     job_directives_skip=[\"select\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "a6316e6a-6a7c-465e-8ae8-d6ee4cbbbb1c",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "d7a22723-7e10-4eac-874b-2af5b624a0df",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-73f62fb4-328f-11ef-ac2a-0000079dfe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-e60ab704-b091-11f0-9443-000003a1fe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -101,7 +101,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">8d8eab87</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">8f441e7a</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -132,14 +132,14 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-9a1f11cc-526c-4b0e-a92f-61b6366c0313</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-54a25655-2b7e-495c-b323-a6a438df893c</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.122.20:46045\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.4:41253\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Workers:</strong> 0\n",
+       "                        <strong>Workers:</strong> 0 \n",
        "                    </td>\n",
        "                </tr>\n",
        "                <tr>\n",
@@ -182,10 +182,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.122.20:46045' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.4:41253' processes=0 threads=0, memory=0 B>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5a46a558-9cb8-416a-a6c3-fd8855aeb00d",
    "metadata": {},
    "outputs": [
@@ -217,19 +217,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/g/data/w42/dr6273/work/energy_climate_modes\n"
+      "/g/data/w42/dr6273/work/power_models\n"
      ]
     }
    ],
    "source": [
-    "%cd /g/data/w42/dr6273/work/energy_climate_modes\n",
+    "%cd /g/data/w42/dr6273/work/power_models\n",
     "\n",
     "import functions as fn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a51003d1-9fc9-4c55-aacd-84b2ac64ea8d",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "897e577e-ca29-494b-80e1-9093b8fc2c93",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "c9964dbf-86e6-4ad1-b4bb-bbdd17f078e5",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "3e4a5428-d514-4ebd-b096-d6d3295e919c",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "b92ddc99-6fe5-4756-8f9a-02d71d38fab1",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "[110, 155, -10, -45]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,57 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "9d7d7851-49e3-4246-a011-2af73d9890aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(2024, 2025)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "years = range(1947, 2024)"
+    "years = range(2024, 2025)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "416d27bc-2036-43a9-9dd7-383cdc72fe04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-49086' coro=<Client._gather.<locals>.wait() done, defined at /g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py:2122> exception=AllExit()>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py\", line 2131, in wait\n",
-      "    raise AllExit()\n",
-      "distributed.client.AllExit\n",
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-49087' coro=<Client._gather.<locals>.wait() done, defined at /g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py:2122> exception=AllExit()>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py\", line 2131, in wait\n",
-      "    raise AllExit()\n",
-      "distributed.client.AllExit\n",
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-49088' coro=<Client._gather.<locals>.wait() done, defined at /g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py:2122> exception=AllExit()>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py\", line 2131, in wait\n",
-      "    raise AllExit()\n",
-      "distributed.client.AllExit\n",
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-49089' coro=<Client._gather.<locals>.wait() done, defined at /g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py:2122> exception=AllExit()>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py\", line 2131, in wait\n",
-      "    raise AllExit()\n",
-      "distributed.client.AllExit\n",
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-49090' coro=<Client._gather.<locals>.wait() done, defined at /g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py:2122> exception=AllExit()>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/client.py\", line 2131, in wait\n",
-      "    raise AllExit()\n",
-      "distributed.client.AllExit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in years:\n",
     "    if year % 5 == 0:\n",
@@ -472,10 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "2737c756-5605-424d-9b1b-e74e889d0acd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:dask_jobqueue.pbs:Resource specification for PBS not set, initializing it to select=1:ncpus=48:mem=179GB\n"
+     ]
+    }
+   ],
    "source": [
     "client.close()\n",
     "cluster.close()"
@@ -492,9 +474,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pangeo)",
+   "display_name": "Python [conda env:analysis3]",
    "language": "python",
-   "name": "pangeo"
+   "name": "conda-env-analysis3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -506,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
